--- a/house-project/src/app/house-card/house-card.component.html
+++ b/house-project/src/app/house-card/house-card.component.html
@@ -1,5 +1,5 @@
 <div class="thumbnail">
-  <img src="../../assets/images/{{house.image}}.jpg" alt="">
+  <img src="../../assets/images/{{house.image}}.jpg" alt="house pic">
 
   <div class="caption test">
     <div *ngIf="!house.showDetails">
@@ -8,7 +8,7 @@
       </h4>
       <h3>
         <i class="glyphicon glyphicon-tag"></i>
-        {{house.price | currency: 'USD': true}}
+        {{house.price | currency: 'USD'}}
       </h3>
       <h4>
         <i class="glyphicon glyphicon-home"></i>
